# prime-factors

./: .gitignore  .travis.yml  CMakeLists.txt  build.py  prime-factors.sln
prime-factors/: FileIOLib.h  FileParserLib.cpp  FileParserLib.h  UtilsLib.cpp  UtilsLib.h  prime-factors.cpp  prime-factors.vcxproj  prime-factors.vcxproj.filters  test-data.txt
prime-factors-lib/: FileParserLib.cpp  FileParserLib.h  UtilsLib.cpp  UtilsLib.h  prime-factors-lib.vcxproj  prime-factors-lib.vcxproj.filters
prime-factors-tests/: FileParserLibTests.cpp  UtilsLibTests.cpp  prime-factors-tests.vcxproj  prime-factors-tests.vcxproj.filters  stdafx.cpp
